--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
