--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 .app__container {
   display: flex;
+  align-items: center;
   justify-content: center;
   color: var(--color_1);
   background: var(--backgound);
   width: 100%;
   height: 100vh;
+}
+
+.app__board .app__game {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
