--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,13 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
+.app__game__square {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #eee;
+    border-radius: 5px;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    font-size: 48px;
+  }
