--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,22 @@
   width: 100%;
   height: 100vh;
 }
-
+.app__title {
+  text-align: center;
+  margin-bottom: 10px;
+}
 .app__board .app__game {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
 .app__game__square {
-    width: 100px;
-    height: 100px;
-    border: 2px solid #eee;
-    border-radius: 5px;
-    display: grid;
-    place-items: center;
-    cursor: pointer;
-    font-size: 48px;
-  }
+  width: 100px;
+  height: 100px;
+  border: 2px solid #eee;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  font-size: 48px;
+}
