Creando modal que notifica al ganador de la partida

--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,40 @@
   background: #09f;
 }
 
-.app__game__turn .app__game__square {
+.app__game__turn .app__game__square,
+.app__game__winner .app__game__square {
   width: 70px;
   height: 70px;
   pointer-events: none;
   border-color: transparent;
+}
+.app__game__winner {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.app__game__winner .text {
+  background: #111;
+  height: 300px;
+  width: 320px;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.app__game__winner .app__game__win {
+  margin: 0 auto;
+  width: fit-content;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  display: flex;
+  gap: 15px;
 }
