--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,21 @@
   display: flex;
   gap: 15px;
 }
+
+.app__board button {
+  padding: 8px 12px;
+  margin: 25px;
+  background: transparent;
+  border: 2px solid #eee;
+  color: #eee;
+  width: 100px;
+  border-radius: 5px;
+  transition: 0.2s;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.app__board button:hover {
+  background: #eee;
+  color: #222;
+}
