--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
 }
+.app__board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .app__game__square {
   width: 100px;
   height: 100px;
